chore(smapling): change docker image (#255)
* chore(smapling): change docker image

* docker

* chore(Dockerfile): bump openjdk image

* logging